Correções e pacotes nuget

--- a/src/Nuget.Quacker.Common/NuGet.config
+++ b/src/Nuget.Quacker.Common/NuGet.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <apikeys>
+    <add key="560b1916-f05e-459b-a717-7a85d3a67fff"></add>
   </apikeys>
   <packageSources>
     <add key="NuGet official package source" value="https://www.nuget.org" />
